fix z-index error

--- a/common/common.scss
+++ b/common/common.scss
@@ -17,7 +17,7 @@ $max-width: 850px;
 }
 
 .card-nav {
-  z-index: -1;
+  z-index: 0;
   position: relative;
 }
 
